<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sort_dialog_title">Order by</string>
    <string name="search_this_beer_title">Search for this beer online</string>
    <string name="share_this_beer_title">Share this beer</string>

    <string name="abv">ABV</string>
    <string name="brewery">Brewery</string>
    <string name="rating">Rating</string>
    <string name="style">Style</string>
    <string name="status">Status</string>

    <string name="oops_this_beer">Forget Rating</string>

    <string name="sort_menu_label">Order by…</string>
    <string name="show_only_style_label">Filter by style…</string>
    <string name="show_only_available_label">Filter by availability…</string>
    <string name="export_label">Export as CSV</string>
    <string name="visit_festival_website_label">Visit Festival website</string>

    <string name="reload_menu_label">Reload Beers</string>
    <string name="refresh_menu_label">Update Beers</string>

    <string name="search_menu_label">Search</string>

    <string name="filter_hint">search</string>

    <string name="loading_message">Checking for updates to beers, please wait…</string>

    <string name="filter_style_dialog_title">Select beer styles to show</string>
    <string name="filter_style_dialog_show_all">Show All</string>

    <string name="filter_available_dialog_title">Select beers to show</string>
    <string name="filter_available_all">Show all beers</string>
    <string name="filter_available_hide">Hide unavailable beers</string>

    <string name="filter_allergen_label">Filter by allergen…</string>
    <string name="filter_allergen_dialog_title">Hide beers containing:</string>
    <string name="filter_allergen_clear_all">Clear All</string>

    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>
    <string name="NoInternetConnection">Not updating beers as there is no internet connection.</string>

    <string name="updating_database">Updating database</string>
    <string name="about_this_application">About</string>
    <string name="search_online">Search for this beer online</string>

    <string name="update_notification_title">Updating Beers</string>
    <string name="update_in_progress_notification_text">Downloading and Updating Beers</string>
    <string name="update_complete_notification_text">%d Beers Updated</string>
    <string name="bookmark_title">Bookmark</string>
    <string name="unbookmark_title">Remove Bookmark</string>

    <string name="tab_beer">Beer</string>
    <string name="tab_low_no">Low/No</string>
    <string name="tab_bookmarks">Bookmarks</string>

    <string-array name="navigation_list">
        <item>All Beers</item>
        <item>Available Only</item>
    </string-array>
</resources>
