<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search_black_48dp"
            android:title="@string/search_menu_label"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            />

    <item
            android:id="@+id/sort"
            android:icon="@drawable/ic_collections_sort_by_size"
            android:title="@string/sort_menu_label"
            android:showAsAction="ifRoom"
            />

    <item
            android:id="@+id/showOnlyStyle"
            android:title="@string/show_only_style_label"
            android:icon="@drawable/ic_action_filter"
            android:showAsAction="ifRoom"
            />

    <item
            android:id="@+id/filterByAllergen"
            android:title="@string/filter_allergen_label"
            android:visible="false"
            android:showAsAction="never"
            />

    <item
            android:id="@+id/hideUnavailable"
            android:visible="false"
            android:title="@string/show_only_available_label"
            android:showAsAction="never"
            />

    <item
            android:id="@+id/visitFestivalWebsite"
            android:visible="false"
            android:title="@string/visit_festival_website_label"
            />

    <item
            android:id="@+id/export"
            android:visible="false"
            android:title="@string/export_label"
            android:showAsAction="ifRoom"
            />

    <item
            android:id="@+id/refreshDatabase"
            android:visible="false"
            android:title="@string/refresh_menu_label"
            />

    <item
            android:id="@+id/reloadDatabase"
            android:visible="false"
            android:title="@string/reload_menu_label"
            />

    <item
            android:id="@+id/aboutApplication"
            android:visible="true"
            android:title="@string/about_this_application"
            />
</menu>
